--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -1,19 +1,19 @@
 .side-bar {
-    transition: left 0.6s ease;
+    transition: left 0.3s ease;
     position: absolute;
-    transform: translateY(5%);
+    transform: translateY(2%);
     left: -150px;
-    display: inline;
-    border-left: none;
     border-right: 2px solid #dbdbdb;
-    padding: 20px 20px;
+    padding: 25px 20px;
     width: 150px;
-    height: 628.5px;
-    background-color: #fafafa;
+    height: 642.5px;
+    color: #ffffff;
+    background-color: #ffffff;
 }
 
 .side-bar li {
     margin-bottom: 20px;
+    height: 20px;
 }
 
 .side-bar li:hover {
@@ -22,6 +22,7 @@
 
 .side-bar:hover {
     left: 0px;
+    color: black;
 }
 .side-bar::first-line {
     left: 0px;
@@ -29,17 +30,16 @@
 
 .side-bar-button {
     position: relative;
-    top: 3px;
-    left: 3px;
+    top: 15px;
     display: inline;
     padding: 3px;
     border: 1px solid #dbdbdb;
-    border-radius: 5px;
-    width: 25px;
-    height: 25px;
+    width: 27px;
+    height: 27px;
     cursor: pointer;
 }
 
 .side-bar-button:hover + .side-bar {
     left: 0px;
+    color: black;
 }
