--- a/css/common.css
+++ b/css/common.css
@@ -1,7 +1,18 @@
 * {
     box-sizing: border-box;
     font-size: 16px;
+}
+
+.root {
+    width: 100%;
+    height: 1000px;
+}
+
+.roots {
+    margin: 0 auto;
+    width: 600px;
     height: 100%;
+    background-color: rgba(26, 23, 23, 0.925);
 }
 
 .container {
@@ -9,10 +20,9 @@
     /* justify-content: space-between; */
     position: relative;
     margin: 0px auto;
-    padding-top: 120px;
+    padding-top: 200px;
     width: 600px;
-    height: 100%;
-    background-color: rgba(26, 23, 23, 0.925);
+    height: 600px;
 }
 
 .logo-header {
@@ -29,9 +39,9 @@
 .main-container {
     display: flex;
     justify-content: center;
+    
     padding: 15px 0px 10px 0px ;
     width: 550px;
-    
 }
 
 .invisible {
