--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,9 +1,18 @@
 .home-page-container {
-    display: flex;
+    display: flexbox;
     justify-content: center;
     text-align: center;
+    /* width: 100%;
+    height: 100%; */
+    border: 3px solid #ffffff;
     width: 100%;
-    height: 100%;
-    
+    height: 640px;
     color: azure;
+}
+
+.home-page-container h1 {
+    margin: 35px 0px;
+    height: auto;
+    font-size: 35px;
+    font-weight: 900;
 }
