--- a/css/modal.css
+++ b/css/modal.css
@@ -2,24 +2,45 @@
     position: absolute;
     display: flex;
     justify-content: center;
-    top: 200px;
-    left: 50px;
+    top: 240px;
+    left: 52px;
     width: 500px;
-    height: 400px;
+    height: 400px;  
+    background-color: #000000bb;
 }
 
 .modal-container {
+    position: absolute;
+    top: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
+    border-radius: 3px;
     width: 400px;
     height: 300px;
-    background-color: aliceblue;
+    color: whitesmoke;
+    background-color: rgba(22, 18, 18, 0.959);
+}
+
+.delete-modal-container {
+    position: absolute;
+    top: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    border-radius: 3px;
+    width: 400px;
+    height: 200px;
+    color: whitesmoke;
+    background-color: rgba(22, 18, 18, 0.959);
 }
 
 .modal-header {
     margin-bottom: 30px;
+    border-bottom: 1px solid;
+    padding: 40px 40px 60px 40px;
     width: 100%;
     height: 20px;
 }
@@ -27,18 +48,46 @@
 .modal-title {
     margin-bottom: 30px;
     font-size: 24px;
+    font-weight: 700;
 }
 
 .modal-main {
     display: flex;
     flex-direction: column;
+    padding: 15px 30px;
+}
+
+.delete-modal-main {
+    margin-top: 20px;
+    padding-top: 40px;
+}
+
+.modal-message {
+    padding-top: 10px;
 }
 
 .modal-main input {
+    border-color: rgb(209, 120, 88);
+    border-radius: 5px;
+    width: 340px;
     height: 20px;
 }
 
+.modal-footer {
+    margin-top: 20px;
+
+}
+
 .modal-btn {
-    width: 25px;
+    font-size: 10px;
+    width: 35px;
     height: 15px;
+    cursor: pointer;
+}
+
+.modal-footer :last-child {
+    padding: 0px;
+    direction: ltr;
+    margin-left: 20px;
+    
 }
